--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
             padding: 5px;
          }
          table tr:nth-child(odd) {
-            background-color: #f2f2f2;
+            background-color: yellow;
          }
          table tr:nth-child(even) {
-            background-color: #ffffff;
+            background-color: white;
          }
       </style>
    </head>
    
-   <body>
+   <body bgcolor="pink">
       <h2>AngularJS Sample Application</h2>
       <div ng-app = "" ng-controller = "studentController">
       
