--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
          <table>
             <tr>
                <th>Name</th>
-               <th>Roll No</th>
+               <th>TokenNo</th>
                <th>Percentage</th>
             </tr>
          
             <tr ng-repeat = "student in students">
                <td>{{ student.Name }}</td>
-               <td>{{ student.RollNo }}</td>
+               <td>{{ student.TokenNo }}</td>
                <td>{{ student.Percentage }}</td>
             </tr>
          </table>
